add swagger API description for /auth
